Create book collection and functions

--- a/index.html
+++ b/index.html
@@ -12,31 +12,8 @@
         <hgroup>
           <h1>Awesome Books</h1>
         </hgroup>
-        <ul>
-          <li>
-            <h2>Title</h2>
-            <h2>Athor</h2>
-            <button>Remove</button>
-            <hr />
-          </li>
-          <li>
-            <h2>Title</h2>
-            <h2>Athor</h2>
-            <button>Remove</button>
-            <hr />
-          </li>
-          <li>
-            <h2>Title</h2>
-            <h2>Athor</h2>
-            <button>Remove</button>
-            <hr />
-          </li>
-          <li>
-            <h2>Title</h2>
-            <h2>Athor</h2>
-            <button>Remove</button>
-            <hr />
-          </li>
+        <ul class="books">
+          
         </ul>
         <form action="#">
           <label for="title">
@@ -45,9 +22,10 @@
           <label for="author">
             <input type="text" placeholder="Author" id="author" />
           </label>
-          <button>Add</button>
+          <button id="add-book">Add</button>
         </form>
       </section>
     </main>
+    <script src="./js/dynamics.js"></script>
   </body>
 </html>
