--- a/index.html
+++ b/index.html
@@ -12,19 +12,22 @@
       <nav>
         <a href="./index.html"><strong>Awesome Books</strong></a>
         <ul>
-          <li><a href="" class="nav-link">List</a></li>
-          <li><a href="" class="nav-link">Add new</a></li>
-          <li><a href="" class="nav-link">Contact</a></li>
+          <li><a href="" class="nav-link " id="main-section-class">List</a></li>
+          <li><a href="" class="nav-link " id="new-book-section-class">Add new</a></li>
+          <li><a href="" class="nav-link " id="contact-section-class">Contact</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <section id="main-section">
+      <section id="main-section" class="content main-section-class show">
         <hgroup>
           <h1>Awesome Books</h1>
         </hgroup>
-        <ul class="books"></ul>
-        <hr />
+        <p class='empty'></p>
+       
+      </section>
+      
+      <section id="new-book-section" class="content new-book-section-class hide" >
         <form action="#">
           <fieldset>
             <legend>Add new book</legend>
@@ -38,20 +41,23 @@
           </fieldset>
         </form>
       </section>
-      <section id="contact-section"></section>
-      <section id="new-book-section">
-        <form action="#">
-          <fieldset>
-            <legend>Add new book</legend>
-            <label for="title">
-              <input type="text" placeholder="Title" id="title" />
-            </label>
-            <label for="author">
-              <input type="text" placeholder="Author" id="author" />
-            </label>
-            <button id="add-book" class="btn add-btn">Add</button>
-          </fieldset>
-        </form>
+      <section id="contact-section" class="content contact-section-class hide">
+          <h1>Contact information</h1>
+          <p>
+            Do have any questions or just want to say "Hello"?
+            you can reach out to us !
+          </p> 
+          <ul>
+            <li>
+              Our email : souadelmansouri2018@gmail.com
+            </li>
+            <li>
+              Our phone : 0999999999
+            </li>
+            <li>
+              Our address : skiidjdznd n° LKSDNSKmlk
+            </li>
+          </ul>
       </section>
     </main>
     <footer><strong>Copyright</strong></footer>
