add date and time

--- a/index.html
+++ b/index.html
@@ -12,22 +12,29 @@
       <nav>
         <a href="./index.html"><strong>Awesome Books</strong></a>
         <ul>
-          <li><a href="" class="nav-link " id="main-section-class">List</a></li>
-          <li><a href="" class="nav-link " id="new-book-section-class">Add new</a></li>
-          <li><a href="" class="nav-link " id="contact-section-class">Contact</a></li>
+          <li><a href="" class="nav-link" id="main-section-class">List</a></li>
+          <li>
+            <a href="" class="nav-link" id="new-book-section-class">Add new</a>
+          </li>
+          <li>
+            <a href="" class="nav-link" id="contact-section-class">Contact</a>
+          </li>
         </ul>
       </nav>
+      <p id="date"></p>
     </header>
     <main>
       <section id="main-section" class="content main-section-class show">
         <hgroup>
           <h1>Awesome Books</h1>
         </hgroup>
-        <p class='empty'></p>
-       
+        <p class="empty"></p>
       </section>
-      
-      <section id="new-book-section" class="content new-book-section-class hide" >
+
+      <section
+        id="new-book-section"
+        class="content new-book-section-class hide"
+      >
         <form action="#">
           <fieldset>
             <legend>Add new book</legend>
@@ -42,22 +49,16 @@
         </form>
       </section>
       <section id="contact-section" class="content contact-section-class hide">
-          <h1>Contact information</h1>
-          <p>
-            Do have any questions or just want to say "Hello"?
-            you can reach out to us !
-          </p> 
-          <ul>
-            <li>
-              Our email : souadelmansouri2018@gmail.com
-            </li>
-            <li>
-              Our phone : 0999999999
-            </li>
-            <li>
-              Our address : skiidjdznd n° LKSDNSKmlk
-            </li>
-          </ul>
+        <h1>Contact information</h1>
+        <p>
+          Do have any questions or just want to say "Hello"? you can reach out
+          to us !
+        </p>
+        <ul>
+          <li>Our email : souadelmansouri2018@gmail.com</li>
+          <li>Our phone : 0999999999</li>
+          <li>Our address : skiidjdznd n° LKSDNSKmlk</li>
+        </ul>
       </section>
     </main>
     <footer><strong>Copyright</strong></footer>
